[tool.poetry]
name = "CanisMajorPy"
version = "0.1.0"
description = "FIWARE Canis Major in fast performance python"
authors = ["Jesus Ruiz"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.70.0"}
uvicorn = {extras = ["standard"], version = "^0.15.0"}
jwcrypto = "^1.0"
web3 = "^5.24.0"
cachetools = "^4.2.4"
devtools = "^0.8.0"
Jinja2 = "^3.0.2"
merklelib = "^1.0"
pytest = "^6.2.5"
typer = "^0.4.0"
attributedict = "^0.3.0"
piccolo = {extras = ["all"], version = "^0.59.0"}
piccolo-api = "^0.28.1"
aiosqlite = "^0.17.0"
locust = "^2.5.1"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
